feat: Separate workout generation from greation
